Refactor db and classname